<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/black"
    tools:context=".fragments.register.NumberConfirmationFragment">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:cardBackgroundColor="@color/list_bg"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.github.pinball83.maskededittext.MaskedEditText
            android:id="@+id/phoneInputEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:mask="+7 *** *** ** **"
            app:notMaskedSymbol="*"
            android:inputType="phone"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"

            />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/resendText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/resend_sms"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="35"
        android:drawableStart="@drawable/icon_time"
        android:drawableLeft="@drawable/icon_time"
        android:drawablePadding="8dp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/codelayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:hintTextColor="@color/colorAccent"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@color/colorAccent"
        app:boxBackgroundColor="@color/list_bg"
        app:hintTextAppearance="@style/TextLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/enter_sms"
        android:theme="@style/TextInputLayoutAppearance"
        app:boxStrokeColor="@color/colorAccent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/resendText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueNumberEnter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/verify_code"
        android:textAllCaps="false"
        app:backgroundTint="@color/colorAccent"
        app:cornerRadius="10dp"
        app:fontFamily="@font/inter_semi_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codelayout"
        app:rippleColor="@android:color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>