<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MapFragment">



    <com.google.android.material.textview.MaterialAutoCompleteTextView
        android:id="@+id/searchAutoCompeteMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/search_bg"
        android:drawableEnd="@drawable/ic_search"
        android:drawableRight="@drawable/ic_search"
        android:drawablePadding="8dp"
        android:hint="@string/search_hint"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/hint_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchAutoCompeteMap" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pin"
        app:layout_constraintBottom_toBottomOf="@+id/mapView"
        app:layout_constraintEnd_toEndOf="@+id/mapView"
        app:layout_constraintStart_toStartOf="@+id/mapView"
        app:layout_constraintTop_toTopOf="@+id/mapView" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/deliverBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/deliver"
        android:textAllCaps="false"
        app:backgroundTint="@color/colorAccent"
        app:cornerRadius="8dp"
        app:fontFamily="@font/inter_semi_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/contactBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@android:color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/contactBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/contact"
        android:textAllCaps="false"
        app:backgroundTint="@color/colorAccent"
        app:cornerRadius="8dp"
        app:fontFamily="@font/inter_semi_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/deliverBtn"
        app:rippleColor="@android:color/white" />


    <LinearLayout
        android:id="@+id/navigationControls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/mapView"
        app:layout_constraintTop_toBottomOf="@+id/searchAutoCompeteMap">


        <ImageView
            android:id="@+id/zoom_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/navigation_selector"
            android:padding="6dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/plus" />


        <ImageView
            android:id="@+id/zoom_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:contentDescription="@null"
            android:background="@drawable/navigation_selector"
            android:padding="6dp"
            app:srcCompat="@drawable/minus" />

        <ImageView
            android:id="@+id/show_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:contentDescription="@null"
            android:background="@drawable/navigation_selector"
            android:padding="11dp"
            app:srcCompat="@drawable/iclocation_map" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>