<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/black"
    tools:context=".fragments.AddToCartFragment">

    <TextView
        android:id="@+id/priceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="260 ₽"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        app:fontFamily="@font/inter_semi_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/foodName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="Шак Бургер с двойной
котлетой и сыром"
        android:textSize="17sp"
        app:fontFamily="@font/inter_semi_bold"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/priceText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodName"
        app:rippleColor="@android:color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/frameLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="#4D000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/innerFoodImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/burgers" />


            </FrameLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="Классический бургер с бифштексом из 100% говядины с маринованными огурчиками"
        app:fontFamily="@font/inter_regular"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minHeight="0dp"
        android:text="Развернуть описание"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:fontFamily="@font/inter_semi_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:rippleColor="@android:color/white" />


    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/list_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/parcel_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/parcel_count"
                android:textColor="@android:color/white"
                app:fontFamily="@font/inter_semi_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:id="@+id/parcelCounterLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/counter_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@null"
                    android:background="@drawable/navigation_selector"
                    android:padding="6dp"
                    app:srcCompat="@drawable/minus" />


                <TextView
                    android:id="@+id/counterText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:text="1"
                    android:textColor="@android:color/white"
                    app:fontFamily="@font/inter_semi_bold" />

                <ImageView
                    android:id="@+id/counter_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:background="@drawable/navigation_selector"
                    android:padding="6dp"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/plus" />


            </LinearLayout>





            <com.google.android.material.button.MaterialButton
                android:id="@+id/addToPlate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/addToCartBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:insetBottom="0dp"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                android:insetTop="0dp"
                android:text="@string/add_to_plate"
                android:textAllCaps="false"
                app:fontFamily="@font/inter_regular"
                app:rippleColor="@android:color/white"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addToCartBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/colorAccent"
                android:insetBottom="0dp"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                android:insetTop="0dp"
                android:text="@string/add_to_cart"
                android:textAllCaps="false"
                app:rippleColor="@android:color/white"
                app:fontFamily="@font/inter_semi_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>